<resources>
    <string name="app_name">Goodsurgery</string>
    <string name="text_logo_app">Logo_App</string>
    <string name="text_help">Ayuda</string>
    <string name="text_info_proceso">Información del proceso</string>
    <string name="text_preoperatorio">Preoperatorio.\nAntes de la cirugía.</string>
    <string name="text_preoperatorio2">Preoperatorio - Antes de la cirugía</string>
    <string name="text_postoperatorio">Postoperatorio.\nTras la cirugía.</string>
    <string name="text_postoperatorio2">Postoperatorio - Tras la cirugía</string>
    <string name="text_cancer">Cáncer colorrectal</string>
    <string name="text_proctologia">¿Cuál es su patología? > Proctología</string>
    <string name="text_suelo">¿Cuál es su patología? > Suelo pélvico</string>
    <string name="text_anestesia">Anestesia</string>
    <string name="text_preparacion">¿Cómo me debo preparar?</string>
    <string name="text_ingreso">El día del ingreso</string>
    <string name="text_hospital">En el Hospital</string>
    <string name="text_atras">Volver atrás</string>
    <string name="text_info_colon">Información sobre colon</string>
    <string name="text_info_recto">Información sobre recto</string>
    <string name="text_alta">Al Alta</string>
    <string name="text_ostomia">Ostomia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_start_game">Contacto</string>
    <string name="start">Start\n</string>
    <string name="cancel">end\n</string>
    <string name="tittle_ayuda">Contacte con su médico</string>
    <string name="text_info_contacto">Teléfono: XXX XXX XXX \nEmail: aaaaaaaaaaa@gmail.com</string>
    <string name="text_cerrar">(Pulse fuera de la pantalla para cerrar)</string>
    <string name="text_comenzar">Pulse aquí para comenzar</string>
    <string name="text_tittle_instrucciones">Instrucciones de uso de la aplicación</string>
    <string name="text_instrucciones">\n1. Pulse en “pulse aquí para comenzar”\n\n2. Una vez presione, seleccione el tipo de intervención/proceso/patología que le hayan explicado en la consulta\n\n3. Una vez dentro encontrará la informacion necesaria para el proceso, preoperatorio y postoperatorio\n\n4. ----------\n\n5. ----------\n\n6. ------------
    </string>
    <string name="text_patologia">¿Cuál es su patología?</string>
    <string name="text_abdominal">¿Cuál es su patología? > Cirugía abdominal</string>
    <string name="polipos_colorrectales">Tumores colorrectales</string>
    <string name="reconstrucci_n_del_tr_nsito">¿Cuál es su patología? > Cirugía de abdomen > Reconstrucción del tránsito</string>
    <string name="enfermedad_inflamatoria_intestinal">¿Cuál es su patología? > Cirugía abdominal > Enfermedad inflamatoria intestinal</string>
    <string name="polipo_colon">Tumor de colon</string>
    <string name="polipo_recto">Tumor de recto</string>
    <string name="ilestomia_lateral">Cierre de ileostomia lateral</string>
    <string name="cierre_de_colostomia_terminal">Cierre de colostomia terminal</string>
    <string name="text_reseccion">Resección intestinal</string>
    <string name="text_estoma">Creación de estoma</string>
    <string name="hemorroides">Hemorroides</string>
    <string name="fisura_anal">Fisura anal</string>
    <string name="fistula_anal">Fistula anal</string>
    <string name="incontinencia">Incontinencia fecal</string>
    <string name="rectocele">Rectocele</string>
    <string name="prolapso">Prolapso</string>
    <string name="polipos"><![CDATA[¿Cuál es su patología? > Cirugía abdominal > Tumores colorrectales]]></string>
    <string name="transito">Reconstrucción del tránsito</string>
    <string name="inflamatoria">Enfermedad inflamatoria intestinal</string>
    <string name="procto">Proctología</string>
    <string name="suelo">Suelo pélvico</string>
    <string name="abdominal">Cirugía abdominal</string>
    <string name="info_patologia">Información sobre la patología</string>
    <string name="txt_ins1">1. Pulse en “pulse aquí para comenzar"</string>
    <string name="txt_ins2">2. Una vez pulsado, deberá buscar el tipo de intervención/proceso/patología que le hayan explicado en la consulta</string>
    <string name="txt_ins3">3. Una vez encontrada dicha patología. Estará situado en una pantalla donde podrá encontrar la informacion relativa a la información del proceso, el preoperatorio y el postoperatorio de su patología</string>
    <string name="txt_ins4">4. También podrá acceder a la información de su patología desde el menú de la pantalla principal</string>
    <string name="txt_ins5">5. Pulse en "Patologías" y se abrirá un desplegable con todas las patologías</string>
    <string name="txt_ins6">6. Busque y pulse su tipo de intervención/proceso/patología</string>
    <string name="salir">Salir</string>
    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>
    <string name="portada">Portada</string>
    <string name="telefono">Teléfono: XXX XXX XXX</string>
    <string name="email">Email: xxxxxxxxxxx@gmail.com</string>
    <string name="volver_atras">Volver atrás</string>
    <string name="example_list">
        <![CDATA[
        <b>Lista de compras:</b><br/>
        <ul>
            <li>Leche</li>
            <li>Pan</li>
            <li>Huevos</li>
        </ul>
    ]]>
    </string>
    <string name="descargar_en_pdf">DESCARGAR PDF</string>
    <string name="cancer_info"><![CDATA[La mayoría de los tipos de cáncer se denomina según la parte del cuerpo donde se originó el cáncer. El cáncer colorrectal se origina en el sistema digestivo, al que también se conoce como sistema GI (gastrointestinal). Es aquí donde se procesan los alimentos para generar energía y eliminar del cuerpo el material de desecho.\n\n Luego de masticar y tragar los alimentos, éstos viajan a través del esófago hacia el estómago, donde se digieren parcialmente y se envían al intestino delgado.\n\n La palabra \"delgado\" se refiere al diámetro del intestino delgado, el cual es en realidad el segmento más largo del sistema digestivo. Tiene alrededor de 20 pies de largo. \n\n El intestino delgado continúa digiriendo los alimentos y absorbe la mayoría de los nutrientes. El intestino delgado se une al intestino grueso, que es un conducto muscular de cerca de cinco pies de largo. La primera parte del intestino grueso, llamada colon, absorbe el agua y los nutrientes de los alimentos y también funciona como un depósito para el material de desecho. Este material se mueve desde el colon al recto, las últimas seis pulgadas del intestino grueso, en donde sale del cuerpo durante la defecación a través de la abertura llamada ano.]]></string>
    <string name="info_cancer_colorrectal">El colon tiene cuatro secciones, tal como se muestra en la gráfica anterior. El cáncer se puede originar en cualquiera de las cuatro secciones o en el recto. La pared de cada una de estas secciones del colon y el recto tiene varias capas de tejido. El cáncer se origina en la capa más interna y puede crecer a través de algunas o todas las otras capas. El saber algo sobre estas capas es beneficioso porque la etapa (la extensión de la propagación) de un cáncer colorrectal depende en gran medida de cuál de estas capas afecte.\n\nEl cáncer que se genera en estas diferentes áreas puede causar síntomas diferentes. Los cánceres del colon y el recto probablemente se desarrollen lentamente en un período de varios años. Sabemos que la mayoría de estos cánceres comienzan como un pólipo, una masa de tejido que crece hacia el centro del colon o el recto. Los pólipos se conocen también como adenomas. El extirpar tempranamente el pólipo puede evitar que se convierta en cáncer.\n\nMás del 95% de los tumores cancerosos del colon y el recto son adenocarcinomas. Éstos son tumores cancerosos de células que cubren la parte interna del colon y el recto. Existen otros tipos de tumores del colon y el recto más raros, pero los datos que aquí se proveen se refieren a los adenocarcinomas.\n\nEl cáncer del colon y el cáncer del recto tienen muchas características en común y a menudo se les refiere juntos como cáncer colorrectal. En este documento se presentan juntos, excepto por la sección sobre el tratamiento, en la que se presentan de forma separada.</string>
    <string name="contraccion_ccr">Aparte del cáncer de la piel, el cáncer colorrectal es el tercer cáncer que se detecta con mayor frecuencia en los hombres y mujeres que viven en los Estados Unidos. La Sociedad Americana del Cáncer calcula que en el 2003 habrá cerca de 105,500 casos nuevos de cáncer del colon y 42,000 casos nuevos de cáncer del recto en este país. Aproximadamente 57,100 personas morirán de ambos tipos de cáncer.\n\nLa tasa de mortalidad del cáncer colorrectal ha ido disminuyendo en los últimos 15 años. Esto puede deberse a que hay menos casos, ya que se detectan más casos más temprano y también porque los tratamientos han mejorado.</string>
    <string name="causas_ccr">Si bien no sabemos exactamente qué causa el cáncer colorrectal, sí sabemos que hay ciertos factores de riesgo que se asocian con esta enfermedad. Un factor de riesgo es cualquier cosa que afecte las probabilidades de una persona de contraer una enfermedad. Algunos factores de riesgo, como el fumar, pueden controlarse, mientras que otros, como la edad de una persona, no se pueden cambiar. Algunos investigadores han encontrado varios factores de riesgo que aumentan las probabilidades de una persona de contraer cáncer colorrectal.</string>
    <string name="factores_de_riesgo_lista1">• Antecedentes familiares Si tiene familiares cercanos (padre, madre, hijo(a) hermano(a) que han padecido de este cáncer, usted corre mayor riesgo. Algunas personas con cáncer colorrectal tienen un defecto genético que causa cáncer. Sin embargo, el cáncer colorrectal es más común en las familias que no tienen un defecto genético.</string>
    <string name="factores_de_riesgo">Las personas con antecedentes familiares de cáncer colorrectal deben hablar con sus médicos sobre la frecuencia con la que deben hacerse las pruebas de detección. Antecedente personal de cáncer colorrectal Incluso cuando se extirpa completamente un cáncer colorrectal, se pueden generar tumores cancerosos nuevos en otras áreas del colon y el recto. Antecedente personal de pólipos Algunos tipos de pólipos aumentan el riesgo de cáncer, especialmente si son grandes o si hay muchos de ellos. Antecedente personal de enfermedad inflamatoria del intestino Una condición llamada colitis ulcerosa o colitis de Crohn aumenta el riesgo de cáncer colorrectal. El colon se encuentra inflamado por un largo período de tiempo y podría tener úlceras en su membrana. Si usted tiene este problema, debe comenzar las pruebas de detección a una edad temprana y hacérselas frecuentemente.</string>
</resources>