<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="0dp"
    android:layout_marginVertical="0dp"
    android:background="@color/background"
    tools:context=".screens.MainActivity"
    android:orientation="vertical">

    <!-- Incluir el header reutilizable -->

    <include layout="@layout/activity_header" />

    <!-- Resto del contenido -->


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        android:elevation="12dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            app:cornerRadius="20dp"
            >

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_tittle_instrucciones"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                app:strokeColor="#108691"
                app:strokeWidth="1dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:background="@color/color_botones"
                />

            <TextView
                android:id="@+id/textInfo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textTitle"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/txt_ins1" />

            <TextView
                android:id="@+id/textInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textInfo1"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/txt_ins2" />
            <TextView
                android:id="@+id/textInfo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textInfo2"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/txt_ins3" />
            <TextView
                android:id="@+id/textInfo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textInfo3"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/txt_ins4" />
            <TextView
                android:id="@+id/textInfo5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textInfo4"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/txt_ins5" />
            <TextView
                android:id="@+id/textInfo6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textInfo5"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/txt_ins6" />
            <!-- Agrega más TextView según sea necesario -->

        </RelativeLayout>

    </androidx.cardview.widget.CardView>



    <Button
        android:id="@+id/btn_comenzar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/color_botones"
        android:text="@string/text_comenzar"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:strokeColor="#108691"
        android:elevation="10dp"
        app:strokeWidth="1dp" />

</LinearLayout>
