<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="0dp"
    android:layout_marginVertical="0dp"
    android:background="@color/background"
    android:orientation="vertical">

    <!-- Incluir el header reutilizable -->
    <include layout="@layout/activity_header_con_atras" />

    <!-- Resto del contenido -->
    <TextView
        android:id="@+id/patologia"
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="@drawable/pagactual2_drawable"
        android:layout_height="@dimen/dimen_titulo"
        android:text="@string/text_patologia"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/text_suelo"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:elevation="20dp"
        android:background="@drawable/pagactual_drawable"
        android:layout_height="@dimen/dimen_subtitulo"
        android:text="@string/text_suelo"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_incontinencia_fecal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_body_buttons_dimen"
        android:layout_marginTop="@dimen/margin_top_body"
        android:layout_marginEnd="@dimen/margin_laterales_body"
        android:layout_marginStart="@dimen/margin_laterales_body"
        android:backgroundTint="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/body_buttons_dimens"
        android:text="@string/incontinencia"
        android:textColor="@color/black"
        app:strokeColor="@color/primary"
        app:strokeWidth="@dimen/stroke_body_drawable"
        />

    <Button
        android:id="@+id/btn_rectocele"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_body_buttons_dimen"
        android:layout_marginTop="@dimen/margin_top_body"
        android:layout_marginEnd="@dimen/margin_laterales_body"
        android:layout_marginStart="@dimen/margin_laterales_body"
        android:backgroundTint="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/body_buttons_dimens"
        android:text="@string/rectocele"
        android:textColor="@color/black"
        app:strokeColor="@color/primary"
        app:strokeWidth="@dimen/stroke_body_drawable"
        />

    <Button
        android:id="@+id/btn_prolapso"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_body_buttons_dimen"
        android:layout_marginTop="@dimen/margin_top_body"
        android:layout_marginEnd="@dimen/margin_laterales_body"
        android:layout_marginStart="@dimen/margin_laterales_body"
        android:backgroundTint="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/body_buttons_dimens"
        android:text="@string/prolapso"
        android:textColor="@color/black"
        app:strokeColor="@color/primary"
        app:strokeWidth="@dimen/stroke_body_drawable"
        />

</LinearLayout>